# elongation_simulator

./: .gitignore  .gitmodules  CMakeLists.txt  Gillespie-Cpp.kdev4  Gillespie.kdev4  MANIFEST.in  README.md  calculateCodonsTimes.cpp  circularbuffer.h  concentrations_reader.cpp  concentrations_reader.h  concentrationsreader.cpp  concentrationsreader.h  elongation_codon.cpp  elongation_codon.h  elongation_simualtors.sln  elongation_simualtors.vcxproj  elongation_simualtors.vcxproj.filters  elongation_simulation_manager.cpp  elongation_simulation_manager.h  elongation_simulation_processor.cpp  elongation_simulation_processor.h  elongation_simulators.sln  elongation_simulators.vcxproj  elongationsimulator.cpp  elongationsimulator.h  enlogationsimulator.cpp  enlogationsimulator.h  enlongation_codon.cpp  enlongation_codon.h  gillespie.cpp  gillespie.h  initiationterminationcodon.cpp  initiationterminationcodon.h  main.cpp  mrna_reader.cpp  mrna_reader.h  mrnaelement.cpp  mrnaelement.h  pyproject.toml  (+13 more)
.github/workflows/: build_conda.yml  build_test_pypi.yml  build_wheels.yml  cmake.yml  release.yml
.kdev4/: Gillespie.kdev4
Unit-Tests/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  circularqueue_test.cpp  cmake_install.cmake  elongation_simulator_manager_test.cpp  mrna_reader_test.cpp  sim_test_01.json  sim_test_02.json  translatortester_test  translatortester_test.cpp
concentrations/: basepairingeditor.py  concentrations_generator.py  default_basepairing.json
data/codons/: average_time.csv  average_time_2011.csv
data/configurations/: sim_test_01.json  sim_test_02.json  sim_test_03.json
data/mRNAs/: MaxCFLuc.txt  RTN3.txt
documentation/: config
documentation/html/: index.html
documentation/latex/: refman.tex
elongation/: concentrations_generator.py  simulationbuilder.py  utils.py
installers/anaconda/elongation_simulator/: bld.bat  meta.yaml
installers/anaconda/elongation_simulators/: bld.bat  build.sh  meta.yaml  meta.yaml.backup
installers/pip/: MANIFEST.in  setup.py
src/: CMakeLists.txt  calculateCodonsTimes.cpp  codon_simulator.cpp  codon_simulator.h  codonsimulator.cpp  elongation_codon.h  elongation_simulation_manager.cpp  ribosomesimulator.h  sequence_simulator.cpp
src/Unit-Tests/: CMakeLists.txt  sequence_simulator_manager_test.cpp  sequence_simulator_test.cpp
test/: concentrations_generator_test.py
translation/: translation.vcxproj  translation.vcxproj.filters
translation_vsproject/: translation.vcxproj  translation.vcxproj.filters
