
enable_testing()
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable(translatortester_test  translatortester_test.cpp)
add_executable(circularqueue_test circularqueue_test.cpp)
target_link_libraries(translatortester_test ${GTEST_BOTH_LIBRARIES} util_lib ribosome_simulator_lib elongation_simulator_lib)
target_link_libraries(circularqueue_test ${GTEST_BOTH_LIBRARIES})

add_test(AllTestsInFoo translatortester_test)
add_test(CircularQueue_test circularqueue_test)