
enable_testing()
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable(translatortester_test  translatortester_test.cpp)
add_executable(circularqueue_test circularqueue_test.cpp)
add_executable(elongation_simulator_manager_test elongation_simulator_manager_test.cpp)
target_link_libraries(translatortester_test ${GTEST_BOTH_LIBRARIES} util_lib ribosome_simulator_lib elongation_simulator_lib)
target_link_libraries(circularqueue_test ${GTEST_BOTH_LIBRARIES})
target_link_libraries(elongation_simulator_manager_test ${GTEST_BOTH_LIBRARIES} elongation_simulator_lib)

add_test(AllTestsInFoo translatortester_test)
add_test(CircularQueue_test circularqueue_test)